--- a/package.json
+++ b/package.json
@@ -12,16 +12,28 @@
   "dependencies": {
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
+    "@permaweb/aoconnect": "^0.0.59",
+    "arweave": "^1.15.1",
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
+    "chartjs-plugin-zoom": "^2.0.1",
     "classnames": "^2.5.1",
     "framer-motion": "^11.3.31",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^1.8.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
-    "react-tooltip": "^5.28.0"
+    "react-select": "^5.8.0",
+    "react-tooltip": "^5.28.0",
+    "semantic-ui-react": "^2.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
