* Added back strict level typescript linting. * Created WalletOverview component. used in aoclimaoptions page and aoweather agent page. * Removed the following packages, leaflet-control-geocoder, and  semantics-ui-react. * fixed withdraw and deposit input field by changing the input names to withdrawAmount and depositAmount respectively. * removed semantics ui link from index file.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.3.31",
     "leaflet": "^1.9.4",
-    "leaflet-control-geocoder": "^1.8.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -28,8 +27,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
-    "react-tooltip": "^5.28.0",
-    "semantic-ui-react": "^2.1.5"
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
