--- a/package.json
+++ b/package.json
@@ -1,40 +1,56 @@
 {
-  "name": "aco",
+  "name": "NotusExchangeOptions",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
+    "@othent/kms": "^1.0.12",
+    "@permaweb/aoconnect": "^0.0.45",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.3.1",
+    "arweave": "^1.14.4",
+    "axios": "^0.27.2",
+    "chart.js": "^3.8.2",
     "classnames": "^2.5.1",
-    "framer-motion": "^11.3.31",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "dotenv": "^16.4.5",
+    "moment": "^2.29.4",
+    "openmeteo": "^1.1.4",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1",
-    "react-tooltip": "^5.28.0"
+    "react-intersection-observer": "^9.10.3",
+    "react-router-dom": "6",
+    "react-tooltip": "^5.28.0",
+    "semantic-ui-react": "^2.1.5",
+    "typescript": "^4.9.5",
+    "vite-plugin-radar": "^0.9.6",
+    "vite-plugin-svgr": "^4.2.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.2.0",
+    "arconnect": "^1.0.3",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.7",
+    "vite": "^5.4.3"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.38"
   }
 }
