--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.3.31",
     "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
