Added Analysis graphs.
- Created a chart component where the selected charts will be displayed.
- Added time range filter to limit data to the selected range.
- Added chartjs date adapter ie(chartjs-adapter-date-fns and date-fns modules)
- Added realtime data to the line chart in the apps page.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "arweave": "^1.15.1",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.31",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
