--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
+    "@othent/kms": "^1.0.12",
     "@permaweb/aoconnect": "^0.0.59",
     "arweave": "^1.15.1",
     "axios": "^1.7.7",
@@ -20,6 +21,7 @@
     "chartjs-plugin-zoom": "^2.0.1",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.31",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
